Adding examples form ckad github repo;

--- a/notes/core-concepts/pod.yml
+++ b/notes/core-concepts/pod.yml
@@ -7,6 +7,8 @@ metadata:
     lang: dotnet
     tier: front-end
 spec:
+  nodeSelector:
+    nodeName: nginxnode
   containers:
     - name: nginx-container
       image: nginx
