--- a/notes/core-concepts/deployment.yml
+++ b/notes/core-concepts/deployment.yml
@@ -1,11 +1,28 @@
-
-
-# deployment dry-run
-k create deployment my-deploy --image=nginx --replicas=4 --dry-run=client -o yaml > dep.yml
-
-
-kubectl scale deploy hoth --replicas=4  -n planets
-
-kubectl set image deploy hoth httpd=httpd:2.4.46 
-
-kubectl edit deployment my-deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+  labels:
+    app: nginx
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
+        resources:
+          limits:
+            memory: "32Mi"
+            cpu: "0.5"
+          requests:
+            cpu: "0.2"
+            memory: "20Mi"
